@startuml
class Clases.AtrAdministrador {
+ boolean guardarDatos(String)
+ boolean login(String,String)
+ int mostrarArray()
+ boolean DesactivarUsuario(String,ArrayList<AtrUsuario>)
+ boolean DesactivarEspecialista(String,ArrayList<AtrEspecialistas>)
+ int buscarUsuario(String,ArrayList<AtrUsuario>)
+ int buscarEspecialista(String,ArrayList<AtrEspecialistas>)
+ boolean ActivarUsuario(String,ArrayList<AtrUsuario>)
+ boolean EliminarUsuario(String,ArrayList<AtrUsuario>)
+ boolean ActivarEspecialista(String,ArrayList<AtrEspecialistas>)
+ boolean EliminarEspecialista(String,ArrayList<AtrEspecialistas>)
+ void guardarArray(AtrSuperUsuario)
}

class Clases.AtrEspecialistas {
- String direccion
- String telefono
- String dni
- String especialidad
- int idEspecialista
- {static} int contador
+ ArrayList<AtrEspecialistas> espe
+ String getEspecialidad()
+ void setEspecialidad(String)
+ String getTelefono()
+ String getDni()
+ void setDni(String)
+ void setTelefono(String)
+ boolean guardarDatos(String)
+ void guardarArray(AtrEspecialistas)
+ boolean login(String,String)
+ AtrEspecialistas iniciarSesion(String,String)
+ int mostrarArray()
+ String toString()
+ void guardarArray(AtrSuperUsuario)
}


class Clases.AtrMensaje {
- {static} long serialVersionUID
- String autor
- String contenido
- List<AtrMensaje> respuestas
- LocalDateTime fechaHora
- {static} DateTimeFormatter formatter
- {static} int ANCHO_MAXIMO
~ String ANSI_RESET
+ String getFechaHora()
+ void setFechaHora(LocalDateTime)
+ String getAutor()
+ String getContenido()
+ void addRespuesta(AtrMensaje)
+ List<AtrMensaje> getRespuestas()
+ String toString()
- String ajustarTexto(String,String)
}


class Clases.AtrUsuario {
- {static} long serialVersionUID
- int idUsuario
- {static} int contador
+ ArrayList<AtrUsuario> usuarios
+ void guardarUsuarios()
+ void cargarUsuarios()
+ boolean guardarDatos(String)
+ boolean login(String,String)
+ void guardarArray(AtrSuperUsuario)
+ int mostrarArray()
+ String toString()
+ {static} void guardarContador()
+ {static} void cargarContador()
+ AtrUsuario iniciarSesion(String,String)
}


interface Clases.metSoloAdministrador {
~ int buscarUsuario(String,ArrayList<AtrUsuario>)
~ boolean DesactivarUsuario(String,ArrayList<AtrUsuario>)
~ boolean ActivarUsuario(String,ArrayList<AtrUsuario>)
~ boolean EliminarUsuario(String,ArrayList<AtrUsuario>)
~ int buscarEspecialista(String,ArrayList<AtrEspecialistas>)
~ boolean ActivarEspecialista(String,ArrayList<AtrEspecialistas>)
~ boolean DesactivarEspecialista(String,ArrayList<AtrEspecialistas>)
~ boolean EliminarEspecialista(String,ArrayList<AtrEspecialistas>)
}

class Clases.AtrForo {
- {static} long serialVersionUID
- List<AtrTema> temas
+ void crearTema(String)
+ void aMensaje(String,String,String)
+ void responderMensaje(String,int,String,String)
+ void mostrarForo()
+ void guardarTemas()
+ void cargarTemas()
}


abstract class Clases.AtrSuperUsuario {
- String nombres
- String usuario
- String contra
- boolean estado
+ {abstract}boolean guardarDatos(String)
+ {abstract}boolean login(String,String)
+ {abstract}void guardarArray(AtrSuperUsuario)
+ {abstract}int mostrarArray()
+ String getNombres()
+ void setNombres(String)
+ String getUsuario()
+ void setUsuario(String)
+ String getContra()
+ void setContra(String)
+ boolean isEstado()
+ void setEstado(boolean)
+ String toString()
}


class Clases.AtrTema {
- {static} long serialVersionUID
- String titulo
- List<AtrMensaje> mensajes
+ String getTitulo()
+ void addMensaje(AtrMensaje)
+ List<AtrMensaje> getMensajes()
+ String toString()
}




Clases.metSoloAdministrador <|.. Clases.AtrAdministrador
java.io.Serializable <|.. Clases.AtrAdministrador
Clases.AtrSuperUsuario <|-- Clases.AtrAdministrador
java.io.Serializable <|.. Clases.AtrEspecialistas
Clases.AtrSuperUsuario <|-- Clases.AtrEspecialistas
java.io.Serializable <|.. Clases.AtrMensaje
java.io.Serializable <|.. Clases.AtrUsuario
Clases.AtrSuperUsuario <|-- Clases.AtrUsuario
Clases.Serializable <|.. Clases.AtrForo
java.io.Serializable <|.. Clases.AtrSuperUsuario
java.io.Serializable <|.. Clases.AtrTema
@enduml